@@ -1,5 +1,12 @@
 from .meteo import Meteo
 from .station import Station
-from .job import Job
+from .job import Job, JobType
+from .connector_type import ExtractType, LoadType
 
-__all__ = ['Meteo', 'Station', 'Job']
+__all__ = ['Meteo',
+           'Station',
+           'Job',
+           'JobType',
+           'ExtractType',
+           'LoadType'
+           ]
